# thissystem

./: .clangd  .gitignore  CMakeLists.txt  CMakeLists.txt.bak  LICENSE  README.md  TBS-FXS1系统.cpp  TBS-FXS1系统的最开始  Wisterl-System.cpp  Wisterl.cpp  a.cpp  a.out  test-file.created.By.AuroraRealm.file.test  test_shaolei.cpp  xmake.lua
.cache/clangd/index/: test-jsq.cpp.FCFA81EA5DBB8674.idx
.github/workflows/: cmake-multi-platform.yml
include/: extern.h  file.h  io.h
src/: Wisterl-System.cpp  Wisterl.cpp  test.cpp
